fix: documentation swagger
